--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root@localhost:3306/languages
+spring.datasource.url=jdbc:mysql://root@localhost:3306/italian
 spring.datasource.username=root
-spring.datasource.password=Cane_Lupo91
+spring.datasource.password=ryuk
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.main.allow-bean-definition-overriding=true
 #spring.jpa.show-sql: true
